force-app/main/default/objects/DelegatedAccount/DelegatedAccount.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>