force-app/main/default/objects/DelegatedAccount/fields/AssortmentExtensionExclusion__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtensionExclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assortment Extension Exclusion</label>
    <type>Checkbox</type>
</CustomField>