force-app/main/default/objects/DelegatedAccount/fields/ManagedByName__c.field-meta.xml
<CustomField>
    <fullName>ManagedByName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; ManagedBy.Id , ManagedBy.FirstName &amp;&quot; &quot;&amp; ManagedBy.LastName &amp; &quot; (&quot;&amp; ManagedBy.Username &amp;&quot;)&quot; , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managed By Name</label>
    <type>Text</type>
</CustomField>