force-app/main/default/objects/DelegatedAccount/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the user is a manager of the external managed account.</description>
    <label>Manager</label>
    <type>Checkbox</type>
</CustomField>