force-app/main/default/objects/DelegatedAccount/fields/TargetAccountName__c.field-meta.xml
<CustomField>
    <fullName>TargetAccountName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Target.Id , Target.Name &amp;&quot; (#&quot;&amp; Target.AccountNumber &amp;&quot;)&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Account Name</label>
    <type>Text</type>
</CustomField>