force-app/main/default/objects/DelegatedAccount/listViews/Alle_delegierten_Accounts.listView-meta.xml
<ListView>
    <fullName>Alle_delegierten_Accounts</fullName>
    <filterScope>Everything</filterScope>
    <label>Alle delegierten Accounts</label>
</ListView>