force-app/main/default/objects/DelegatedAccount/listViews/Meine_delegierten_Accounts.listView-meta.xml
<ListView>
    <fullName>Meine_delegierten_Accounts</fullName>
    <filterScope>Mine</filterScope>
    <label>Meine delegierten Accounts</label>
</ListView>